--- a/index.html
+++ b/index.html
@@ -37,6 +37,14 @@
             <p>En OrcasBelow, nos apasiona la naturaleza del mar. Creemos en la importancia de transmitir esta belleza a través de nuestros productos, hechos con amor y dedicación.</p>
         </section>
 
+        <section class="news">
+            <h2>Últimas noticias del mar</h2>
+            <div id="news-container">
+                <p>Cargando noticias...</p>
+            </div>
+        </section>
+        <script src="js/noticias.js"></script>
+        
         <section class="images-container">
             <h2>Inspírate</h2>
             <div class="image-item">
