--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio - OrcasBelow</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css">
+    <script defer src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
 </head>
+
 <body>
     <header>
         <div class="logo">
@@ -14,8 +18,7 @@
         <nav id="menu">
             <ul>
                 <li><a href="views/index.html" class="active">Inicio</a></li>
-                <li><a href="views/productos.html">Productos</a></li>
-                <li><a href="views/presupuesto.html">Presupuesto</a></li>
+                <li><a href="views/galeria.html">Galería</a></li>
                 <li><a href="views/contacto.html">Contacto</a></li>
             </ul>
         </nav>
@@ -29,39 +32,89 @@
 
         <section class="services">
             <h2>Productos destacados</h2>
-            <p>Ofrecemos una variedad de productos con ilustraciones únicas inspiradas en el mar. Desde camisetas hasta tazas, todo con un toque de naturaleza y frescura marina.</p>
+
+            <div class="row cards-container">
+                <div class="col-lg-3 col-md-6 mb-3 card-item">
+                    <img src="img/card1.jpg" alt="Producto 1">
+                    <h3>Láminas</h3>
+                    <p>Arte para amantes del mar.</p>
+                </div>
+
+                <div class="col-lg-3 col-md-6 mb-3 card-item">
+                    <img src="img/card2.jpg" alt="Producto 2">
+                    <h3>Tazas</h3>
+                    <p>Diseños inspirados en el océano.</p>
+                </div>
+
+                <div class="col-lg-3 col-md-6 mb-3 card-item">
+                    <img src="img/card3.jpg" alt="Producto 3">
+                    <h3>Gorras</h3>
+                    <p>Detalles únicos con esencia marina.</p>
+                </div>
+
+                <div class="col-lg-3 col-md-6 mb-3 card-item">
+                    <img src="img/card4.jpg" alt="Producto 4">
+                    <h3>Bolsas</h3>
+                    <p>Ilustraciones marinas en algodón orgánico.</p>
+                </div>
+            </div>
         </section>
 
         <section class="about">
             <h2>Sobre nosotros</h2>
             <p>En OrcasBelow, nos apasiona la naturaleza del mar. Creemos en la importancia de transmitir esta belleza a través de nuestros productos, hechos con amor y dedicación.</p>
         </section>
-
-        <section class="news">
-            <h2>Últimas noticias del mar</h2>
-            <div id="news-container">
-                <p>Cargando noticias...</p>
-            </div>
-        </section>
-        <script src="js/noticias.js"></script>
         
         <section class="images-container">
             <h2>Inspírate</h2>
-            <div class="image-item">
-                <img src="img/ilustracion-mar1.jpg" alt="Ilustración del mar 1" width="250" height="250">
-            </div>
-            <div class="image-item">
-                <img src="img/ilustracion-mar2.jpg" alt="Ilustración del mar 2" width="250" height="250">
-            </div>
-            <div class="image-item">
-                <img src="img/ilustracion-mar3.jpg" alt="Ilustración del mar 3" width="250" height="250">
+
+            <div class="swiper-container">
+                <div class="swiper-wrapper">
+
+                    <div class="swiper-slide">
+                        <img src="img/ilustracion-mar1.jpg" alt="Ilustración del mar 1">
+                    </div>
+
+                    <div class="swiper-slide">
+                        <img src="img/ilustracion-mar2.jpg" alt="Ilustración del mar 2">
+                    </div>
+
+                    <div class="swiper-slide">
+                        <img src="img/ilustracion-mar3.jpg" alt="Ilustración del mar 3">
+                    </div>
+
+                    <div class="swiper-slide">
+                        <img src="img/ilustracion-mar4.jpg" alt="Ilustración del mar 4">
+                    </div>
+
+                    <div class="swiper-slide">
+                        <img src="img/ilustracion-mar5.jpg" alt="Ilustración del mar 5">
+                    </div>
+
+                </div>
+
+                <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-pagination"></div>
             </div>
         </section>
+
     </main>
 
     <footer>
-        <p>C/ Ejemplo 123, Ciudad, País</p>
-        <p>Aviso legal</p>
+        <div class="footer-info">
+            <p>C/ Historiador Diago, 17, Extramurs, 46007 Valencia</p>
+            <p>Aviso legal</p>
+        </div>
+
+        <div class="footer-nav">
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="views/galeria.html">Galería</a></li>
+                <li><a href="views/contacto.html">Contacto</a></li>
+            </ul>
+        </div>
+
         <div class="social">
             <a href="https://www.instagram.com" target="_blank">
                 <img src="img/instagram.svg" alt="Instagram" width="30" height="30">
@@ -75,7 +128,33 @@
             <a href="https://www.tiktok.com" target="_blank">
                 <img src="img/tiktok.svg" alt="TikTok" width="30" height="30">
             </a>
-        </div>        
+        </div>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+    document.addEventListener("DOMContentLoaded", function () {
+        new Swiper(".swiper-container", {
+            slidesPerView: 3,
+            spaceBetween: 10,
+            centeredSlides: true,
+            loop: true,
+            navigation: {
+                nextEl: ".swiper-button-next",
+                prevEl: ".swiper-button-prev",
+            },
+            pagination: {
+                el: ".swiper-pagination",
+                clickable: true,
+            },
+            breakpoints: {
+                768: { slidesPerView: 3 },
+                480: { slidesPerView: 2 },
+                320: { slidesPerView: 1 },
+            },
+        });
+    });
+    </script>
+
 </body>
 </html>
